samples/task/invalid/R48.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <example>Direct text in example is not allowed.</example>
  </taskbody>
</task>